Migrate from Jcenter to MavenCentral

--- a/surroundcardview/gradle.properties
+++ b/surroundcardview/gradle.properties
@@ -1,15 +1,16 @@
 group=com.furkanakdemir
-versionName=1.0.2
+versionName=1.0.6
 pomArtifactId=surroundcardview
 pomName=SurroundCardView
 pomPackaging=aar
 pomDescription=A material card view with an animated stroke for Android API 23+
 pomUrl=https://github.com/furkanakdemir/surroundcardview
 pomScmUrl=https://github.com/furkanakdemir/surroundcardview
-pomScmConnection=scm:git:git://github.com/furkanakdemir/surroundcardview.git
-pomScmDevConnection=scm:git:git://github.com/furkanakdemir/surroundcardview.git
+pomScmConnection=scm:git://github.com/furkanakdemir/surroundcardview.git
+pomScmDevConnection=scm:git://github.com/furkanakdemir/surroundcardview.git
 pomLicenceName=The Apache Software License, Version 2.0
 pomLicenceUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
 pomLicenceDist=repo
 pomDeveloperId=furkanakdemir
 pomDeveloperName=Furkan Akdemir
+kotlin.stdlib.default.dependency=false
